Change notes for 0.5.dev1 (start Jul 18, 2015)

CORRECTED BUGS:
- Bug with callback methods in ccore library in syncnet (ccore.syncnet) and hsyncnet (ccore.hsyncnet) that may lead to loss of accuracy.

- Bug with division by zero in kmeans algorithm (ccore.kmeans, pyclustering.cluster.kmeans) when cluster after center updating is not able to capture object.
  See: https://github.com/annoviko/pyclustering/issues/238

- Bug with stack overflow in KD tree in case of big data (pyclustering.container.kdtree).
  See: https://github.com/annoviko/pyclustering/pull/239

- Bug with incorrect clustering in case of the same elements in cure algorithm (pyclustering.cluster.cure).
  See: https://github.com/annoviko/pyclustering/pull/239
  
- Bug with execution fail in case of wrong number of initial medians and in case of the same objects with several initial medians (pyclustering.kmedians.kmedians).
  See: https://github.com/annoviko/pyclustering/issues/256